<resources>
    <string name="app_name">MyAppPortfolio</string>
    <string name="text_title">My Nanodegree Apps!</string>
    <string name="button_send_pm">POPULAR MOVIES</string>
    <string name="button_send_sh">STOCK HAWK</string>
    <string name="button_send_bi">BUILD IT BIGGER</string>
    <string name="button_send_my">MAKE YOUR APP MATERIAL</string>
    <string name="button_send_gu">GO UBIQUITOUS</string>
    <string name="button_send_ca">CAPSTONE</string>
    <string name="button_send_to">ALERT</string>
</resources>
