<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.duncwa.myappportfolio.MainActivity">

    <TextView
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_title"
        android:id="@+id/text"
         />

    <Button
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/text"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/button_send_pm"
        android:id="@+id/button1" />

    <Button
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/button1"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/button_send_sh"
        android:id="@+id/button2" />

    <Button
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/button2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/button_send_bi"
        android:id="@+id/button3" />

    <Button
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/button3"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/button_send_my"
        android:id="@+id/button4" />

    <Button
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/button4"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/button_send_gu"
        android:id="@+id/button5" />

    <Button
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/button5"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/button_send_ca"
        android:id="@+id/button6" />

    <Button
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/button6"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/button_send_to"
        android:id="@+id/button7" />
</RelativeLayout>
